--- a/admin/app/views/user_list.scala.html
+++ b/admin/app/views/user_list.scala.html
@@ -4,7 +4,7 @@
 
 <h1 class="page-header">Users</h1>
 
-<a href="@admin.routes.AdminController.dashBoard"><button class="btn btn-success">Add User</button></a>
+<a href="@AdminController.dashBoard"><button class="btn btn-success">Add User</button></a>
 
 <h2 class="sub-header"></h2>
 <div class="table-responsive">
@@ -34,6 +34,6 @@
     </table>
 </div>
 
-<a href='@admin.routes.AdminController.dashBoard'>Back to Dashboard</a>
+<a href='@AdminController.dashBoard'>Back to Dashboard</a>
 
 }
