--- a/admin/app/views/template_match_event.scala.html
+++ b/admin/app/views/template_match_event.scala.html
@@ -54,6 +54,6 @@
     </table>
 </div>
 
-<a href='@admin.routes.AdminController.templateMatchEvents'>Back to Template Match Events</a>
+<a href='@AdminController.templateMatchEvents'>Back to Template Match Events</a>
 
 }
