--- a/admin/app/views/main.scala.html
+++ b/admin/app/views/main.scala.html
@@ -100,6 +100,7 @@
                 <li><a href="@AdminController.optaSoccerPlayers">Opta Players</a></li>
                 <li><a href="@AdminController.optaSoccerTeams">Opta Teams</a></li>
                 <li><a href="@AdminController.optaMatchEvents">Opta Match Events</a></li>
+                <li><a href="@AdminController.optaEvents">Opta Events</a></li>
             </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
@@ -119,7 +120,7 @@
 
 <script type="text/javascript" charset="utf-8">
         $(document).ready( function () {
-            console.log( "DataTable init" );
+//            console.log( "DataTable init" );
             $('#table_id').DataTable();
         } );
 </script>
