--- a/admin/app/views/template_contest_list.scala.html
+++ b/admin/app/views/template_contest_list.scala.html
@@ -4,7 +4,7 @@
 
 <h1 class="page-header">Template Contests</h1>
 
-<a href="@AdminController.createTemplateContest"><button class="btn btn-success">Create Contest</button></a>
+<a href="@AdminController.createAllTemplateContests"><button class="btn btn-success">Create All Contests</button></a>
 
 <h2 class="sub-header"></h2>
 <div class="table-responsive">
@@ -14,6 +14,7 @@
             <th>Id</th>
             <th>Name</th>
             <th>PostName</th>
+            <th>Num. Matches</th>
             <th>Min Instances</th>
             <th>Max Entries</th>
             <th>Salary Cap</th>
@@ -33,6 +34,7 @@
             <td>@p.templateContestId</td>
             <td>@p.name</td>
             <td>@p.postName</td>
+            <td>@p.templateMatchEventIds.size()</td>
             <td>@p.minInstances</td>
             <td>@p.maxEntries</td>
             <td>@p.salaryCap</td>
