--- a/admin/app/views/template_contest_list.scala.html
+++ b/admin/app/views/template_contest_list.scala.html
@@ -4,6 +4,7 @@
 
 <h1 class="page-header">Template Contests</h1>
 
+<a href="@AdminController.addTemplateContest"><button class="btn btn-success">Add Contest</button></a>
 <a href="@AdminController.createAllTemplateContests"><button class="btn btn-success">Create All Contests</button></a>
 
 <h2 class="sub-header"></h2>
