--- a/admin/app/views/main.scala.html
+++ b/admin/app/views/main.scala.html
@@ -1,15 +1,19 @@
-@(title: String)(content: Html)(implicit message: controllers.admin.FlashMessage = null)
+@(title: String)(content: Html)
 
+@import controllers.admin.FlashMessage
 
 @flash_message() = {
-    @if(message !=null) {
-        @if(!message.text.isEmpty) {
-            <div class="alert alert-@message.alertType alert-dismissable">
-                <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-                <span class="">@message.text</span>
-            </div>
+    @for(message <- FlashMessage.list) {
+        @if(message !=null) {
+            @if(!message.text.isEmpty) {
+                <div class="alert alert-@message.alertType alert-dismissable">
+                    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+                    <span class="">@message.text</span>
+                </div>
+            }
         }
     }
+    @FlashMessage.clear
 }
 
 <!DOCTYPE html>
