--- a/admin/app/views/main.scala.html
+++ b/admin/app/views/main.scala.html
@@ -106,6 +106,9 @@
                 <li><a href="@AdminController.optaMatchEvents">Opta Match Events</a></li>
                 <li><a href="@AdminController.optaEvents">Opta Events</a></li>
             </ul>
+            <ul class="nav nav-sidebar">
+                <li><a href="@AdminController.simulator">Simulator</a></li>
+            </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             @flash_message
