AdminController: "create points translation" -> clear data

--- a/admin/app/views/points_translation_list.scala.html
+++ b/admin/app/views/points_translation_list.scala.html
@@ -5,7 +5,7 @@
 
 <h1 class="page-header">Contests</h1>
 
-<a href="@AdminController.createPointsTranslation"><button class="btn btn-success">Create Points Translation</button></a>
+<a href="@AdminController.createPointsTranslation"><button class="btn btn-danger">Create Points Translation</button></a>
 
 <h2 class="sub-header"></h2>
 <div class="table-responsive">
