--- a/admin/app/views/main.scala.html
+++ b/admin/app/views/main.scala.html
@@ -89,6 +89,7 @@
             <ul class="nav nav-sidebar">
                 <li><a href="@AdminController.lobby">Lobby</a></li>
                 <li><a href="@AdminController.users">Users</a></li>
+                <li><a href="@AdminController.liveContestEntries">Live Contest Entries</a></li>
                 <li><a href="@AdminController.liveMatchEvents">Live Match Events</a></li>
                 <li><a href="@AdminController.pointsTranslations">Points Translations</a></li>
                 <li><a href="@AdminController.contestEntries">Contest Entries</a></li>
