--- a/admin/app/views/contest_list.scala.html
+++ b/admin/app/views/contest_list.scala.html
@@ -13,7 +13,7 @@
         <tr>
             <th>Id</th>
             <th>Name</th>
-            <th>CurrentUserIds</th>
+            <th>CurrentUsers</th>
             <th>maxUsers</th>
             <th>TemplateContestId</th>
             <th></th>
@@ -24,7 +24,7 @@
         <tr>
             <td>@p.contestId</td>
             <td><a href="@AdminController.contest(p.contestId.toString())">@p.name</a></td>
-            <td>@p.currentUserIds</td>
+            <td>@p.currentUserIds.size()</td>
             <td>@p.maxUsers</td>
             <td><a href="@AdminController.templateContest(p.templateContestId.toString())">@p.templateContestId</a></td>
             <td><a href="@AdminController.enterContest(p.contestId.toString())"><button class="btn btn-success">Enter</button></a></td>
