--- a/admin/app/views/contest_entry_add.scala.html
+++ b/admin/app/views/contest_entry_add.scala.html
@@ -28,6 +28,7 @@
                 <th>Field Pos</th>
                 <th>Salary</th>
                 <th>Fantasy Points</th>
+                <th></th>
             </tr>
             </thead>
             <tbody>
@@ -39,6 +40,7 @@
                 <td>@p.fieldPos</td>
                 <td>@p.salary</td>
                 <td>@p.fantasyPoints</td>
+                <td><button class="btn btn-success addSoccer" value="@p.optaPlayerId">+</button></td>
             </tr>
             }
             </tbody>
@@ -46,8 +48,24 @@
     </div>
 }
 
+@scripts = {
+    <script type="text/javascript">
+    $(document).ready( function(){
+      $(".addSoccer").click(function() {
+        var optaPlayerId = $(this).val();
+        // console.log("click " + valor);
+        // var soccersEmpty = $('.soccer[value=""]');
+        var soccersEmpty = $('.soccer').filter(function() { return this.value == ""; });
+        soccersEmpty.each(function() {
+            this.value = optaPlayerId;
+            return false;
+        });
+      })
+    })
+    </script>
+}
 
-@main("Contest Entry - Admin") {
+@main("Contest Entry - Admin", scripts) {
 
 <h1 class="page-header">Contest Entry</h1>
 
@@ -79,7 +97,7 @@
         <div class="control-group">
             <label class="control-label">Goalkeeper</label>
             <div class="controls">
-                @input_text(contestEntryForm("goalkeeper"), _placeholder = "OptaId for Goalkeeper", _class = "input-xlarge")
+                @input_text(contestEntryForm("goalkeeper"), _placeholder = "OptaId for Goalkeeper", _class = "soccer goalkeeper input-xlarge")
             </div>
         </div>
 
@@ -87,10 +105,10 @@
         <div class="control-group">
             <label class="control-label">Defenses</label>
             <div class="controls">
-                @input_text(contestEntryForm("defense1"), _placeholder = "OptaId for Defense", _class = "input-xlarge")
-                @input_text(contestEntryForm("defense2"), _placeholder = "OptaId for Defense", _class = "input-xlarge")
-                @input_text(contestEntryForm("defense3"), _placeholder = "OptaId for Defense", _class = "input-xlarge")
-                @input_text(contestEntryForm("defense4"), _placeholder = "OptaId for Defense", _class = "input-xlarge")
+                @input_text(contestEntryForm("defense1"), _placeholder = "OptaId for Defense", _class = "soccer defense input-xlarge")
+                @input_text(contestEntryForm("defense2"), _placeholder = "OptaId for Defense", _class = "soccer defense input-xlarge")
+                @input_text(contestEntryForm("defense3"), _placeholder = "OptaId for Defense", _class = "soccer defense input-xlarge")
+                @input_text(contestEntryForm("defense4"), _placeholder = "OptaId for Defense", _class = "soccer defense input-xlarge")
             </div>
         </div>
 
@@ -98,10 +116,10 @@
         <div class="control-group">
             <label class="control-label">Middles</label>
             <div class="controls">
-                @input_text(contestEntryForm("middle1"), _placeholder = "OptaId for Middle", _class = "input-xlarge")
-                @input_text(contestEntryForm("middle2"), _placeholder = "OptaId for Middle", _class = "input-xlarge")
-                @input_text(contestEntryForm("middle3"), _placeholder = "OptaId for Middle", _class = "input-xlarge")
-                @input_text(contestEntryForm("middle4"), _placeholder = "OptaId for Middle", _class = "input-xlarge")
+                @input_text(contestEntryForm("middle1"), _placeholder = "OptaId for Middle", _class = "soccer middle input-xlarge")
+                @input_text(contestEntryForm("middle2"), _placeholder = "OptaId for Middle", _class = "soccer middle input-xlarge")
+                @input_text(contestEntryForm("middle3"), _placeholder = "OptaId for Middle", _class = "soccer middle input-xlarge")
+                @input_text(contestEntryForm("middle4"), _placeholder = "OptaId for Middle", _class = "soccer middle input-xlarge")
             </div>
         </div>
 
@@ -109,8 +127,8 @@
         <div class="control-group">
             <label class="control-label">Forwards</label>
             <div class="controls">
-                @input_text(contestEntryForm("forward1"), _placeholder = "OptaId for Forward", _class = "input-xlarge")
-                @input_text(contestEntryForm("forward2"), _placeholder = "OptaId for Forward", _class = "input-xlarge")
+                @input_text(contestEntryForm("forward1"), _placeholder = "OptaId for Forward", _class = "soccer forward input-xlarge")
+                @input_text(contestEntryForm("forward2"), _placeholder = "OptaId for Forward", _class = "soccer forward input-xlarge")
             </div>
         </div>
 
@@ -118,18 +136,19 @@
         <div class="control-group">
             <label class="control-label" for="ok"></label>
             <div class="controls">
-                <button id="ok" name="ok" class="btn btn-success">Create</button>
+                <button id="ok" name="ok" type="submit" class="btn btn-success">Create</button>
                 <a href="@AdminController.contestEntries" class="btn btn-danger">Cancel</a>
             </div>
         </div>
 
     </fieldset>
+}
 
-    @if(match_events != null) {
-        @for(p <- match_events) {
-            @show_team(p.soccerTeamA)
-            @show_team(p.soccerTeamB)
-        }
+
+@if(match_events != null) {
+    @for(p <- match_events) {
+        @show_team(p.soccerTeamA)
+        @show_team(p.soccerTeamB)
     }
 }
 
