Admin: link to fantasy points in "Live Match Event"

--- a/admin/app/views/live_contest_entry.scala.html
+++ b/admin/app/views/live_contest_entry.scala.html
@@ -22,7 +22,7 @@
             <td>@p.optaPlayerId</td>
             <td>@p.fieldPos</td>
             <td>@p.name</td>
-            <td><a href="@AdminController.showPlayerFantasyPoints(contest_entry.contestId.toString(), p.templateSoccerPlayerId.toString())">@p.fantasyPoints</a></td>
+            <td><a href="@AdminController.showPlayerFantasyPointsInContest(contest_entry.contestId.toString(), p.templateSoccerPlayerId.toString())">@p.fantasyPoints</a></td>
         </tr>
         }
         </tbody>
