--- a/admin/app/views/points_translation_add.scala.html
+++ b/admin/app/views/points_translation_add.scala.html
@@ -49,7 +49,7 @@
         <label class="control-label" for="ok"></label>
         <div class="controls">
             <button id="ok" name="ok" type="submit" class="btn btn-success">Create</button>
-            <a href="@AdminController.contestEntries" class="btn btn-danger">Cancel</a>
+            <a href="@AdminController.pointsTranslations" class="btn btn-danger">Cancel</a>
         </div>
     </div>
 
