--- a/admin/app/views/player_fantasy_points.scala.html
+++ b/admin/app/views/player_fantasy_points.scala.html
@@ -1,10 +1,20 @@
 @(soccer_player: model.TemplateSoccerPlayer, opta_events: List[model.opta.OptaEvent])
 
+@total_points() = {
+    @{
+        var total = 0
+        for(event <- opta_events) {
+            total += event.points
+        }
+        total
+    }
+}
+
 @main("Player Fantasy Points - Admin") {
 
 <h1 class="page-header">Player Fantasy Points</h1>
 
-<h2 class="sub-header">@soccer_player.name</h2>
+<h2 class="sub-header">@soccer_player.name: @total_points points</h2>
 <div class="table-responsive">
     <table id="table_id" class="table table-striped">
         <thead>
@@ -39,7 +49,5 @@
         </tbody>
     </table>
 </div>
-
-<a href='@AdminController.contestEntries'>Back to Contest Entries</a>
 
 }
