Template Match Event: is Match Started / Finished ?

--- a/admin/app/views/opta_event_list.scala.html
+++ b/admin/app/views/opta_event_list.scala.html
@@ -24,7 +24,7 @@
         <tbody>
         @for(p <- opta_events) {
         <tr>
-            <td>@p._id</td>
+            <td>@p.pointsTranslationId</td>
             <td>@p.competitionId</td>
             <td>@p.gameId</td>
             <td>@p.homeTeamId</td>
