--- a/admin/app/views/player_fantasy_points.scala.html
+++ b/admin/app/views/player_fantasy_points.scala.html
@@ -50,7 +50,7 @@
         <tbody>
         @for(p <- opta_events) {
         <tr>
-            <td>@p._id</td>
+            <td>@p.optaEventId</td>
             <td>@p.competitionId</td>
             <td>@p.gameId</td>
             <td>@p.eventId</td>
