--- a/admin/app/views/points_translation_list.scala.html
+++ b/admin/app/views/points_translation_list.scala.html
@@ -22,7 +22,7 @@
         <tbody>
         @for(p <- points_translation) {
         <tr>
-            <td>@p._id</td>
+            <td>@p.pointsTranslationId</td>
             <td>@p.eventTypeId</td>
             <td>@p.points</td>
             <td>@p.timestamp.format("yyyy/MM/dd hh:mm:ss")</td>
