Refactored event points calculations

--- a/admin/app/views/points_translation_list.scala.html
+++ b/admin/app/views/points_translation_list.scala.html
@@ -7,6 +7,7 @@
 
 <a href="@AdminController.addPointsTranslation"><button class="btn btn-success">Add Points Translation</button></a>
 <a href="@AdminController.createPointsTranslation"><button class="btn btn-danger">Create Points Translation</button></a>
+<a href="@AdminController.updateOptaEvents"><button class="btn btn-danger">Update points of events</button></a>
 
 <h2 class="sub-header"></h2>
 <div class="table-responsive">
