Admin: live match events updated

--- a/admin/app/views/live_match_event_list.scala.html
+++ b/admin/app/views/live_match_event_list.scala.html
@@ -25,7 +25,7 @@
             <td>
                 <a href="@AdminController.liveMatchEvent(p.liveMatchEventId.toString())">
                     @p.soccerTeamA.name (@p.soccerTeamA.getFantasyPoints()) vS @p.soccerTeamB.name (@p.soccerTeamB.getFantasyPoints())</a></td>
-            <td>@p.startDate.format("yyyy/MM/dd hh:mm:ss")</td>
+            <td>@p.startDate.format("yyyy/MM/dd HH:mm:ss")</td>
         </tr>
         }
         </tbody>
