--- a/admin/app/views/opta_event_list.scala.html
+++ b/admin/app/views/opta_event_list.scala.html
@@ -32,9 +32,9 @@
             <td>@p.optaPlayerId</td>
             <td>@p.typeId</td>
             <td>@p.points</td>
-            <td>@p.timestamp.format("yyyy/MM/dd hh:mm:ss")</td>
+            <td>@p.timestamp.format("yyyy/MM/dd HH:mm:ss")</td>
          @if(p.lastModified != null) {
-            <td>@p.lastModified.format("yyyy/MM/dd hh:mm:ss")</td>
+            <td>@p.lastModified.format("yyyy/MM/dd HH:mm:ss")</td>
          } else {
             <td></td>
          }
