--- a/admin/app/views/points_translation_list.scala.html
+++ b/admin/app/views/points_translation_list.scala.html
@@ -26,7 +26,7 @@
             <td>@p.pointsTranslationId</td>
             <td>@p.eventTypeId</td>
             <td>@p.points</td>
-            <td>@p.timestamp.format("yyyy/MM/dd hh:mm:ss")</td>
+            <td>@p.timestamp.format("yyyy/MM/dd HH:mm:ss")</td>
         </tr>
         }
         </tbody>
