--- a/admin/app/views/template_contest_list.scala.html
+++ b/admin/app/views/template_contest_list.scala.html
@@ -42,7 +42,7 @@
             <td>@p.salaryCap</td>
             <td>@p.entryFee</td>
             <td>@p.prizeType</td>
-            <td>@p.startDate.format("yyyy/MM/dd hh:mm:ss")</td>
+            <td>@p.startDate.format("yyyy/MM/dd HH:mm:ss")</td>
             <td>
                 <a href="@AdminController.deleteTemplateContest(p.templateContestId.toString())"><button class="btn btn-danger">-</button></a>
             </td>
