--- a/admin/app/views/live_match_event.scala.html
+++ b/admin/app/views/live_match_event.scala.html
@@ -1,10 +1,42 @@
 @(match_event: model.LiveMatchEvent)
 
-@main("Live Mach Event - Admin") {
+@import model._
+
+@scripts = {
+    <script type="text/javascript">
+
+        function updatePage() {
+            console.log("reload");
+            window.location.reload(true);
+        }
+
+        $(document).ready( function(){
+            window.setInterval(updatePage, 10000);
+        })
+
+    </script>
+}
+
+@match_event_state(match_event_id : String) = {
+    @if(Model.isMatchEventFinished(match_event_id)) {
+        <button class="btn btn-danger state_match_event" value="@match_event_id">Finished</button>
+    } else {
+        @if(Model.isMatchEventStarted(match_event_id)) {
+            <button class="btn btn-success state_match_event" value="@match_event_id">Live</button>
+        } else {
+            <button class="btn btn-warning state_match_event" value="@match_event_id">Waiting</button>
+        }
+    }
+}
+
+
+@main("Live Mach Event - Admin", scripts) {
 
 <h1 class="page-header">Live Match Event: @match_event.liveMatchEventId</h1>
 
 <h2 class="sub-header">Start Date: @match_event.startDate</h2>
+<h3><span>@Model.matchEventTime(match_event.templateMatchEventId.toString()).format("HH:mm:ss")</span> @match_event_state(match_event.templateMatchEventId.toString())</h3>
+
 <div class="table-responsive">
     <table class="table table-striped">
         <thead>
