--- a/admin/app/views/template_match_event_list.scala.html
+++ b/admin/app/views/template_match_event_list.scala.html
@@ -2,21 +2,34 @@
 
 @import model._
 
-@match_event_state(mach_event : model.TemplateMatchEvent) = {
-    @{
-        if(Model.isMatchEventFinished(mach_event)) {
-            <button class="btn btn-danger">Finished</button>
+@scripts = {
+<script type="text/javascript">
+
+        function updatePage() {
+            console.log("reload");
+            window.location.reload(true);
+        }
+
+        $(document).ready( function(){
+            window.setInterval(updatePage, 10000);
+        })
+
+    </script>
+}
+
+@match_event_state(match_event_id : String) = {
+    @if(Model.isMatchEventFinished(match_event_id)) {
+        <button class="btn btn-danger state_match_event" value="@match_event_id">Finished</button>
+    } else {
+        @if(Model.isMatchEventStarted(match_event_id)) {
+            <a href="@AdminController.liveMatchEventWithTemplate(match_event_id)"><button class="btn btn-success state_match_event" value="@match_event_id">Live</button></a>
         } else {
-            if(Model.isMatchEventStarted(mach_event)) {
-                <button class="btn btn-success">Live</button>
-            } else {
-                <button class="btn btn-warning">Waiting</button>
-            }
+            <button class="btn btn-warning state_match_event" value="@match_event_id">Waiting</button>
         }
     }
 }
 
-@main("Template Mach Events - Admin") {
+@main("Template Mach Events - Admin", scripts) {
 
 <h1 class="page-header">Template Match Events</h1>
 
@@ -44,8 +57,8 @@
             <td>
                 <a href="@AdminController.templateMatchEvent(p.templateMatchEventId.toString())">
                     @p.soccerTeamA.name vS @p.soccerTeamB.name</a></td>
-            <td>@p.startDate.format("yyyy/MM/dd hh:mm:ss")</td>
-            <td>@match_event_state(p)</td>
+            <td>@p.startDate.format("yyyy/MM/dd HH:mm:ss")</td>
+            <td>@match_event_state(p.templateMatchEventId.toString())</td>
         </tr>
         }
         </tbody>
