--- a/admin/app/views/contest_list.scala.html
+++ b/admin/app/views/contest_list.scala.html
@@ -1,6 +1,36 @@
 @(contests: List[model.Contest])
 
-@main("Contests - Admin") {
+@import model._
+
+@scripts = {
+    <script type="text/javascript">
+
+        function updatePage() {
+            console.log("reload");
+            window.location.reload(true);
+        }
+
+        $(document).ready( function(){
+            window.setInterval(updatePage, 10000);
+        })
+
+    </script>
+}
+
+
+@contest_state(template_contest_id : String) = {
+    @if(Model.isContestFinished(template_contest_id)) {
+        <button class="btn btn-danger" value="@template_contest_id">Finished</button>
+    } else {
+        @if(Model.isContestStarted(template_contest_id)) {
+            <button class="btn btn-success" value="@template_contest_id">Live</button>
+        } else {
+            <button class="btn btn-warning" value="@template_contest_id">Waiting</button>
+        }
+    }
+}
+
+@main("Contests - Admin", scripts) {
 
 <h1 class="page-header">Contests</h1>
 
@@ -16,6 +46,7 @@
             <th>CurrentUsers</th>
             <th>maxUsers</th>
             <th>TemplateContestId</th>
+            <th>State</th>
             <th></th>
         </tr>
         </thead>
@@ -27,6 +58,7 @@
             <td>@p.currentUserIds.size()</td>
             <td>@p.maxUsers</td>
             <td><a href="@AdminController.templateContest(p.templateContestId.toString())">@p.templateContestId</a></td>
+            <td>@contest_state(p.templateContestId.toString())</td>
             <td>
                 <a href="@AdminController.enterContest(p.contestId.toString())"><button class="btn btn-success">Enter</button></a>
                 <a href="@AdminController.deleteContest(p.contestId.toString())"><button class="btn btn-danger">-</button></a>
