--- a/admin/app/views/template_contest_list.scala.html
+++ b/admin/app/views/template_contest_list.scala.html
@@ -1,6 +1,35 @@
 @(template_contests: List[model.TemplateContest])
 
-@main("Template Contests - Admin") {
+@import model._
+
+@scripts = {
+    <script type="text/javascript">
+
+        function updatePage() {
+            console.log("reload");
+            window.location.reload(true);
+        }
+
+        $(document).ready( function(){
+            window.setInterval(updatePage, 10000);
+        })
+
+    </script>
+}
+
+@contest_state(template_contest_id : String) = {
+    @if(Model.isContestFinished(template_contest_id)) {
+        <button class="btn btn-danger" value="@template_contest_id">Finished</button>
+    } else {
+        @if(Model.isContestStarted(template_contest_id)) {
+            <button class="btn btn-success" value="@template_contest_id">Live</button>
+        } else {
+            <button class="btn btn-warning" value="@template_contest_id">Waiting</button>
+        }
+    }
+}
+
+@main("Template Contests - Admin", scripts) {
 
 <h1 class="page-header">Template Contests</h1>
 
@@ -22,6 +51,7 @@
             <th>Entry Fee</th>
             <th>Prize Type</th>
             <th>Start Date</th>
+            <th>State</th>
             <th></th>
             <!--
             @for(i <- 0 to 10) {
@@ -43,6 +73,7 @@
             <td>@p.entryFee</td>
             <td>@p.prizeType</td>
             <td>@p.startDate.format("yyyy/MM/dd HH:mm:ss")</td>
+            <td>@contest_state(p.templateContestId.toString())</td>
             <td>
                 <a href="@AdminController.deleteTemplateContest(p.templateContestId.toString())"><button class="btn btn-danger">-</button></a>
             </td>
